--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,9 @@
             </intent-filter>
         </receiver>
 
+        <!--<meta-data-->
+            <!--android:name="android.max_aspect"-->
+            <!--android:value="2.1"/>-->
         <meta-data
             android:name="UMENG_APPKEY"
             android:value="${UMENG_APPKEY}"/>
