--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,22 @@
 
 buildscript {
     repositories {
-        jcenter()
-        google()
+//        jcenter()
+//        google()
+
+        maven {
+            url "https://maven.aliyun.com/repository/google"
+        }
+        maven {
+            url "https://maven.aliyun.com/repository/jcenter"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+//        classpath 'com.android.tools.build:gradle:3.4.2'
+
+        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,8 +25,15 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        google()
+//        jcenter()
+//        google()
+
+        maven {
+            url "https://maven.aliyun.com/repository/google"
+        }
+        maven {
+            url "https://maven.aliyun.com/repository/jcenter"
+        }
     }
 }
 
