--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-#org.gradle.jvmargs=-Xmx1536m
-org.gradle.jvmargs=-Xmx512m -XX:MaxPermSize=512m
+org.gradle.jvmargs=-Xmx1536m
+#org.gradle.jvmargs=-Xmx512m -XX:MaxPermSize=512m
 #org.gradle.jvmargs=-Xmx2048m
 #MaxHeapSize=512m
 
@@ -18,3 +18,7 @@ org.gradle.jvmargs=-Xmx512m -XX:MaxPermSize=512m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+android.useAndroidX=true
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
